--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,20 @@ astunparse==1.6.3
 async-timeout==3.0.1
 bcrypt==3.2.0
 blinker==1.4
+blis==0.7.4
 bump2version==1.0.1
 bumpversion==0.6.0
 cachetools==4.2.2
+catalogue==2.0.6
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
-click==8.0.1
+click==7.1.2
 colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.7
+cymem==2.0.5
 decorator==4.4.2
 dill==0.3.4
 dnspython==1.16.0
@@ -29,11 +32,9 @@ fakeredis==1.5.2
 fastapi==0.66.0
 fastapi-mail==0.4.0
 filelock==3.0.12
-Flask==2.0.1
 flatbuffers==1.12
-FrenchLefffLemmatizer==0.3
+fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.1.0/fr_core_news_md-3.1.0-py3-none-any.whl
 gast==0.4.0
-gensim==4.0.1
 google-auth==1.33.0
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
@@ -57,15 +58,17 @@ Keras-Preprocessing==1.1.2
 Mako==1.1.4
 Markdown==3.3.4
 MarkupSafe==2.0.1
+murmurhash==1.0.5
 networkx==2.5.1
 nltk==3.6.2
 numpy==1.19.5
-nylas==4.12.1
 oauthlib==3.1.1
 openapi-codec==1.3.2
 opt-einsum==3.3.0
 packaging==20.9
 pandas==1.2.5
+pathy==0.6.0
+preshed==3.0.5
 protobuf==3.17.3
 psycopg2==2.8.6
 pyasn1==0.4.8
@@ -105,8 +108,11 @@ smart-open==5.1.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.2.1
+spacy==3.1.2
+spacy-legacy==3.0.8
 SQLAlchemy==1.4.22
 sqlparse==0.2.4
+srsly==2.4.1
 starlette==0.14.2
 stop-words==2018.7.23
 tabulate==0.8.9
@@ -116,15 +122,18 @@ tensorboard-plugin-wit==1.8.0
 tensorflow-cpu==2.5.0
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
+thinc==8.0.8
 threadpoolctl==2.2.0
 tokenizers==0.10.3
 tqdm==4.61.2
 transformers==4.8.2
+typer==0.3.2
 typing-extensions==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.5
 URLObject==2.4.3
 uvicorn==0.14.0
+wasabi==0.8.2
 Werkzeug==2.0.1
 wrapt==1.12.1
 yake==0.4.8
