--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,6 @@ h11==0.12.0
 h5py==3.1.0
 httpcore==0.13.6
 httpx==0.18.2
-huggingface-hub==0.0.12
 idna==2.10
 inflection==0.5.1
 itsdangerous==2.0.1
@@ -87,10 +86,8 @@ python-editor==1.0.4
 python-multipart==0.0.5
 pytz==2021.1
 PyYAML==5.4.1
-rake-nltk==1.0.4
 redis==3.5.3
 regex==2021.7.6
-requests==2.25.1
 requests-oauthlib==1.3.0
 rfc3986==1.5.0
 rsa==4.7.2
@@ -114,19 +111,18 @@ SQLAlchemy==1.4.22
 sqlparse==0.2.4
 srsly==2.4.1
 starlette==0.14.2
-stop-words==2018.7.23
 tabulate==0.8.9
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow-cpu==2.5.0
+tensorflow==2.5.0
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
+textblob==0.15.3
+textblob-fr==0.2.0
 thinc==8.0.8
 threadpoolctl==2.2.0
-tokenizers==0.10.3
 tqdm==4.61.2
-transformers==4.8.2
 typer==0.3.2
 typing-extensions==3.7.4.3
 uritemplate==3.0.1
