--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,73 @@
-absl-py==0.13.0
-aiofiles==0.7.0
 aioredis==2.0.0
 aiosmtplib==1.1.6
-alembic==1.6.5
 anyio==3.3.0
-asgiref==3.3.4
-astunparse==1.6.3
+asgiref==3.4.1
 async-timeout==3.0.1
 bcrypt==3.2.0
 blinker==1.4
 blis==0.7.4
-bump2version==1.0.1
-bumpversion==0.6.0
-cachetools==4.2.2
 catalogue==2.0.6
 certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
+cffi==1.14.6
+charset-normalizer==2.0.4
 click==7.1.2
 colorama==0.4.4
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==3.4.7
+cryptography==3.4.8
 cymem==2.0.5
-decorator==4.4.2
-dill==0.3.4
-dnspython==1.16.0
-drf-yasg==1.20.0
+dnspython==2.1.0
 email-validator==1.1.3
-fakeredis==1.5.2
-fastapi==0.66.0
-fastapi-mail==0.4.0
-filelock==3.0.12
-flatbuffers==1.12
+fakeredis==1.6.0
+fastapi==0.68.1
+fastapi-mail==0.4.1
 fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.1.0/fr_core_news_sm-3.1.0-py3-none-any.whl
-greenlet==1.1.0
-grpcio==1.34.1
-gunicorn==20.1.0
+greenlet==1.1.1
 h11==0.12.0
-h5py==3.1.0
 httpcore==0.13.6
-httpx==0.18.2
-idna==2.10
-inflection==0.5.1
-itsdangerous==2.0.1
-itypes==1.2.0
-jellyfish==0.8.2
+httpx==0.19.0
+idna==3.2
+jellyfish==0.8.8
 Jinja2==3.0.1
 joblib==1.0.1
+jwt==1.2.0
+MarkupSafe==2.0.1
+murmurhash==1.0.5
+networkx==2.6.2
 nltk==3.6.2
-numpy==1.19.5
-oauthlib==3.1.1
-openapi-codec==1.3.2
-opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.5
+numpy==1.21.2
+packaging==21.0
+pandas==1.3.2
 pathy==0.6.0
 preshed==3.0.5
-protobuf==3.17.3
-
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+psycopg2==2.9.1
 pycparser==2.20
 pydantic==1.8.2
-PyJWT==1.7.1
-pyOpenSSL==20.0.1
 pyparsing==2.4.7
-pyperclip==1.8.2
-python-dateutil==2.8.1
-python-decouple==3.3
-python-dotenv==0.19.0
-python-editor==1.0.4
+python-dateutil==2.8.2
+python-decouple==3.4
 python-multipart==0.0.5
 pytz==2021.1
-PyYAML==5.4.1
 redis==3.5.3
-regex==2021.7.6
-
+regex==2021.8.28
+requests==2.26.0
 rfc3986==1.5.0
-rsa==4.7.2
-ruamel.yaml==0.17.9
-ruamel.yaml.clib==0.2.2
-sacremoses==0.0.45
-scikit-learn==0.24.2
-scipy==1.7.0
 segtok==1.5.10
-
-simplejson==3.17.2
-six==1.15.0
-sklearn==0.0
-smart-open==5.1.0
+six==1.16.0
+smart-open==5.2.1
 sniffio==1.2.0
 sortedcontainers==2.4.0
-soupsieve==2.2.1
 spacy==3.1.2
 spacy-legacy==3.0.8
-SQLAlchemy==1.4.22
-sqlparse==0.2.4
+SQLAlchemy==1.4.23
 srsly==2.4.1
 starlette==0.14.2
+tabulate==0.8.9
 textblob==0.15.3
 textblob-fr==0.2.0
 thinc==8.0.8
-
+tqdm==4.62.2
 typer==0.3.2
-typing-extensions==3.7.4.3
-uritemplate==3.0.1
-urllib3==1.26.5
-URLObject==2.4.3
-uvicorn==0.14.0
+typing-extensions==3.10.0.2
+urllib3==1.26.6
+uvicorn==0.15.0
 wasabi==0.8.2
-Werkzeug==2.0.1
-wrapt==1.12.1
 yake==0.4.8
