--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ fastapi==0.68.1
 fastapi-mail==0.4.1
 fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.1.0/fr_core_news_sm-3.1.0-py3-none-any.whl
 greenlet==1.1.1
+gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.13.6
 httpx==0.19.0
